Revert "fonte das categorias"
This reverts commit 592ad2f2c4cc36ffdab57872452851868b9251b9.

--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -7,6 +7,22 @@
     <title> Categorias </title>
 </head>
 
+<style>
+    .categorias{
+        padding-left: 100px;
+    }
+
+    .botao{
+        background-color: #000000;
+        color: #FFFFFF;
+        border-radius: 8px;
+        width: 250px;
+        height: 100px;
+        font-family: 'poppins';
+    }
+
+</style>
+
 <body>
 
     <h1>
@@ -19,7 +35,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botaoC categorias" type="button" onclick="listarOld()">
+                    <button class="botao categorias" type="button" onclick="listarOld()">
                         Old Money
                     </button>
 
@@ -31,7 +47,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botaoC" type="button" onclick="listarModern()">
+                    <button class="botao" type="button" onclick="listarModern()">
                         Modern
                     </button>
 
@@ -47,7 +63,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botaoC" type="button" onclick="listarBeach()">
+                    <button class="botao" type="button" onclick="listarBeach()">
                         Beach
                     </button>
 
@@ -59,7 +75,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botaoC" type="button" onclick="listarCity()">
+                    <button class="botao" type="button" onclick="listarCity()">
                         City
                     </button>
 
@@ -76,7 +92,35 @@
         
     </div>
 
-    <script></script>
+    <script>
+
+        let dadosDoBanco =[
+            {
+                "id": 1,
+                "nome": "Nome 1",
+                "email": "email1@site.com"
+            },
+
+            {
+                "id": 2,
+                "nome": "Nome 2",
+                "email": "email2@site.com"
+            },
+
+            {
+                "id": 3,
+                "nome": "Nome 3",
+                "email": "email3@site.com"
+            },
+
+            {
+                "id": 4,
+                "nome": "Nome 4",
+                "email": "email4@site.com"
+            }
+        ] 
+
+	</script>
     
 </body>
 </html>
