--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -7,22 +7,6 @@
     <title> Categorias </title>
 </head>
 
-<style>
-    .categorias{
-        padding-left: 100px;
-    }
-
-    .botao{
-        background-color: #000000;
-        color: #FFFFFF;
-        border-radius: 8px;
-        width: 250px;
-        height: 100px;
-        font-family: 'poppins';
-    }
-
-</style>
-
 <body>
 
     <h1>
@@ -39,10 +23,6 @@
                         Old Money
                     </button>
 
-                    <p>
-                        Description: houses for... 
-                    </p>
-
                 </div>
 
                 <div class="col-sm-6">
@@ -50,10 +30,6 @@
                     <button class="botao" type="button" onclick="listarModern()">
                         Modern
                     </button>
-
-                    <p>
-                        Description: houses for... 
-                    </p>
 
                 </div>
 
@@ -67,10 +43,6 @@
                         Beach
                     </button>
 
-                    <p>
-                        Description: houses for... 
-                    </p>
-
                 </div>
 
                 <div class="col-sm-6">
@@ -78,10 +50,6 @@
                     <button class="botao" type="button" onclick="listarCity()">
                         City
                     </button>
-
-                    <p>
-                        Description: houses for... 
-                    </p>
 
                 </div>
 
@@ -94,7 +62,7 @@
 
     <script>
 
-        let dadosDoBanco =[
+        let listarOld =[
             {
                 "id": 1,
                 "nome": "Nome 1",
@@ -105,20 +73,20 @@
                 "id": 2,
                 "nome": "Nome 2",
                 "email": "email2@site.com"
-            },
-
-            {
-                "id": 3,
-                "nome": "Nome 3",
-                "email": "email3@site.com"
-            },
-
-            {
-                "id": 4,
-                "nome": "Nome 4",
-                "email": "email4@site.com"
             }
         ] 
+
+        let listarModern =[
+
+        ]
+
+        let listarBeach =[
+
+        ]
+
+        let listarCity =[
+            
+        ]
 
 	</script>
     
