--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -7,6 +7,18 @@
     <title> Categorias </title>
 </head>
 
+<style>
+    
+.botao{
+    background-color: #000000;
+    color: #FFFFFF;
+    border-radius: 8px;
+    width: 250px;
+    height: 100px;
+    font-family: 'Roboto Slab', serif;
+}
+</style>
+
 <body>
 
     <h1>
@@ -19,7 +31,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao categorias" type="button" onclick="listarOld()">
+                    <button class="botao" type="button" onclick="listarOld()">
                         Old Money
                     </button>
 
