--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -8,7 +8,27 @@
 </head>
 
 <style>
-    
+
+.botaoOld{
+    padding-top: 100px;
+    padding-left: 100px;
+}
+
+.botaoBeach{
+    padding-top: 100px;
+    padding-bottom:100px ;
+    padding-left: 100px;
+}
+
+.botaoModern{
+    padding-top: 100px;
+}
+
+.botaoCity{
+    padding-top: 100px;
+    padding-bottom:100px ;
+}
+
 .botao{
     background-color: #000000;
     color: #FFFFFF;
@@ -31,7 +51,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao" type="button" onclick="listarOld()">
+                    <button class="botao botaoOld" type="button" onclick="listarOld()">
                         Old Money
                     </button>
 
@@ -39,7 +59,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao" type="button" onclick="listarModern()">
+                    <button class="botao botaoModern" type="button" onclick="listarModern()">
                         Modern
                     </button>
 
@@ -51,7 +71,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao" type="button" onclick="listarBeach()">
+                    <button class="botao botaoBeach" type="button" onclick="listarBeach()">
                         Beach
                     </button>
 
@@ -59,7 +79,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao" type="button" onclick="listarCity()">
+                    <button class="botao botaoCity" type="button" onclick="listarCity()">
                         City
                     </button>
 
