Revert "Padding botão"
This reverts commit 654b1ddbad4aa7bc662d9e29e2636d83c27d0529.

--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -8,27 +8,7 @@
 </head>
 
 <style>
-
-.botaoOld{
-    padding-top: 100px;
-    padding-left: 100px;
-}
-
-.botaoBeach{
-    padding-top: 100px;
-    padding-bottom:100px ;
-    padding-left: 100px;
-}
-
-.botaoModern{
-    padding-top: 100px;
-}
-
-.botaoCity{
-    padding-top: 100px;
-    padding-bottom:100px ;
-}
-
+    
 .botao{
     background-color: #000000;
     color: #FFFFFF;
@@ -51,7 +31,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao botaoOld" type="button" onclick="listarOld()">
+                    <button class="botao" type="button" onclick="listarOld()">
                         Old Money
                     </button>
 
@@ -59,7 +39,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao botaoModern" type="button" onclick="listarModern()">
+                    <button class="botao" type="button" onclick="listarModern()">
                         Modern
                     </button>
 
@@ -71,7 +51,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao botaoBeach" type="button" onclick="listarBeach()">
+                    <button class="botao" type="button" onclick="listarBeach()">
                         Beach
                     </button>
 
@@ -79,7 +59,7 @@
 
                 <div class="col-sm-6">
 
-                    <button class="botao botaoCity" type="button" onclick="listarCity()">
+                    <button class="botao" type="button" onclick="listarCity()">
                         City
                     </button>
 
