--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap" rel="stylesheet" />
 
 	<link href="<%= root %>/public/css/estilo.css" rel="stylesheet" />
+
+    <%- defineContent("head") %>
 </head>
 <body>
     <div class="limitador">
