--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -8,24 +8,21 @@
 
         <div class="col-sm-6">
 
-            <div class="card card-categoria shadow mb-4" onclick="listarOld()">
+            <div class="card card-categoriaOld shadow mb-4">
                 <div class="card-body card-body-categoria">
                     <div>Old Money</div>
                 </div>
               </div>
-        <!--
-            <button class="botao" type="button">
-                Old Money
-            </button>
-        -->
 
         </div>
 
         <div class="col-sm-6">
 
-            <button class="botao" type="button" onclick="listarModern()">
-                Modern
-            </button>
+            <div class="card card-categoriaModern shadow mb-4">
+                <div class="card-body card-body-categoria">
+                    <div>Modern</div>
+                </div>
+              </div>
 
         </div>
 
@@ -35,17 +32,21 @@
 
         <div class="col-sm-6">
 
-            <button class="botao" type="button" onclick="listarBeach()">
-                Beach
-            </button>
+            <div class="card card-categoriaBeach shadow mb-4">
+                <div class="card-body card-body-categoria">
+                    <div>Beach</div>
+                </div>
+              </div>
 
         </div>
 
         <div class="col-sm-6">
 
-            <button class="botao" type="button" onclick="listarCity()">
-                City
-            </button>
+            <div class="card card-categoriaCity shadow mb-4">
+                <div class="card-body card-body-categoria">
+                    <div>City</div>
+                </div>
+              </div>
 
         </div>
 
@@ -54,41 +55,32 @@
 
 </div>
 
-<script>
-
-    let listarOld =[
-        {
-            "id": 1,
-            "nome": "Nome 1",
-            "email": "email1@site.com"
-        },
-
-        {
-            "id": 2,
-            "nome": "Nome 2",
-            "email": "email2@site.com"
-        }
-    ] 
-
-    let listarModern =[
-
-    ]
-
-    let listarBeach =[
-
-    ]
-
-    let listarCity =[
-        
-    ]
-
-</script>
-
 <%- contentFor("head") %>
 <style>
 
-.card-categoria {
-    background-image: url(/public/img/mansao.jpg);
+.card-categoriaOld {
+    background-image: url(/public/img/OldMoneyHouse.jpg);
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.card-categoriaModern {
+    background-image: url(/public/img/ModernHouse.jpg);
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.card-categoriaBeach {
+    background-image: url(/public/img/BeachHouse.jpg);
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.card-categoriaCity {
+    background-image: url(/public/img/CityHouse.jpeg);
     background-size: cover;
     background-position: center;
     cursor: pointer;
@@ -100,14 +92,7 @@
     flex-direction: column;
     justify-content: end;
     min-height: 15rem;
-}
-
-.botao {
-    background-color: #000000;
     color: #FFFFFF;
-    border-radius: 8px;
-    width: 250px;
-    height: 100px;
     font-family: 'Roboto Slab', serif;
 }
 
