--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
                         </button>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">PROPERTIES</a>
+                            <a class="dropdown-item" href="/categorias">PROPERTIES</a>
                             <a class="dropdown-item" href="#">CONTACT</a>
                             <a class="dropdown-item" href="#">STAFF</a>
                             <a class="dropdown-item" href="#">FEEDBACK</a>
@@ -45,7 +45,9 @@
 
                 <div class="col-sm-6 text-center">
 
+                    <a href="/">
 					<img src="<%= root %>/public/img/logo.png" width="300" />
+                    </a>
 
                 </div>
 
