--- a/views/index/cadastro.ejs
+++ b/views/index/cadastro.ejs
@@ -10,6 +10,31 @@
 	</div>
 
 	<div class="form-group">
+		<label for="foto">Área Total</label>
+		<input class="form-control" type="number" id="areatotal" name="areatotal" min="1" />
+	</div>
+
+	<div class="form-group">
+		<label for="foto">Área Construída</label>
+		<input class="form-control" type="number" id="areaconstruida" name="areaconstruida" min="1" />
+	</div>
+
+	<div class="form-group">
+		<label for="foto">Comodos</label>
+		<input class="form-control" type="number" id="comodos" name="comodos" min="1" />
+	</div>
+
+	<div class="form-group">
+		<label for="foto">Piscinas</label>
+		<input class="form-control" type="number" id="piscinas" name="piscinas" min="1" />
+	</div>
+
+	<div class="form-group">
+		<label for="foto">Vagas</label>
+		<input class="form-control" type="number" id="vagas" name="vagas" min="1" />
+	</div>
+	
+	<div class="form-group">
 		<label for="foto">Foto</label>
 		<input class="form-control" type="file" id="foto" name="foto" accept="image/jpeg" />
 	</div>
