--- a/views/index/propriedades.ejs
+++ b/views/index/propriedades.ejs
@@ -10,27 +10,27 @@
     
     
             <p>
-            Preço: <%= lista[i].preco
+            Preço: <%= lista[i].preco %>
             </p>
     
             <p>
-            Área total: <%= lista[i].areatotal
+            Área total: <%= lista[i].areatotal %>
             </p>
     
             <p>
-            Área contruida: <%= lista[i].areaconstruida
+            Área contruida: <%= lista[i].areaconstruida %>
             </p>
     
             <p>
-            Comodos: <%= lista[i].comodos
+            Comodos: <%= lista[i].comodos %>
             </p>
     
             <p>
-            Piscinas: <%= lista[i].piscinas
+            Piscinas: <%= lista[i].piscinas %>
             </p>
     
             <p>
-            Vagas: <%= lista[i].vagas
+            Vagas: <%= lista[i].vagas %>
             </p>
     
             <img class="mansao" src="/public/img/propriedades/<%= lista[i].idmansao %>.jpg" width="500">
