--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,10 +35,9 @@
                         </button>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="/categorias">PROPERTIES</a>
-                            <a class="dropdown-item" href="#">CONTACT</a>
-                            <a class="dropdown-item" href="#">STAFF</a>
-                            <a class="dropdown-item" href="#">FEEDBACK</a>
+                            <a class="dropdown-item" href="/propriedades">PROPERTIES</a>
+                            <a class="dropdown-item" href="/cadastro">REGISTER</a>
+                            <a class="dropdown-item" href="/categorias">CATEGORIES</a>
                         </div>
                     </div>
                 </div>
