--- a/views/index/cadastro.ejs
+++ b/views/index/cadastro.ejs
@@ -40,7 +40,7 @@
 	</div>
 
 	<div>
-		<button class="btn btn-primary" type="submit">Criar Embarcação</button>
+		<button class="btn btn-primary" type="submit">Registrar Mansão</button>
 	</div>
 </form>
 
