--- a/views/index/cadastro.ejs
+++ b/views/index/cadastro.ejs
@@ -1,4 +1,5 @@
-﻿<form id="form">
+﻿
+<form id="form">
 	<div class="form-group">
 		<label for="nome">Nome</label>
 		<input class="form-control" type="text" id="nome" name="nome" maxlength="50" />
