--- a/views/index/propriedades.ejs
+++ b/views/index/propriedades.ejs
@@ -32,7 +32,7 @@
                         Vagas: <%= lista[i].vagas %>
                     </p>
 
-                    <img class="mansao" src="/public/img/propriedades/<%= lista[i].idmansao %>.jpg" width="500">
+                    <img class="mansao" src="/public/img/propriedades/<%= lista[i].id %>.jpg" width="500">
 
 
                 </div>
