--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -94,3 +94,8 @@ img {
     background-color: transparent;
     border-color: transparent;
 }
+
+.Agradecimento {
+   padding: 50px;
+    text-align: center;
+}   
