--- a/views/index/obrigado.ejs
+++ b/views/index/obrigado.ejs
@@ -1,1 +1,18 @@
 <!-- obrigado por utilizar o site, vc sera contactado em....-->
+
+
+
+
+
+    <div class="container-fluid Agradecimento">
+            <div >
+                <h2>
+                    Obrigado por Escolher o TopGMansions
+                </h2>
+
+                <p>
+                    Entraremos em contato, assim que possivel.
+                </p>
+
+            </div>
+</div>
