--- a/views/index/obrigado.ejs
+++ b/views/index/obrigado.ejs
@@ -1,18 +1,34 @@
 <!-- obrigado por utilizar o site, vc sera contactado em....-->
 
 
-
-
-
-    <div class="container-fluid Agradecimento">
-            <div >
-                <h2>
-                    Obrigado por Escolher o TopGMansions
-                </h2>
-
-                <p>
-                    Entraremos em contato, assim que possivel.
-                </p>
-
-            </div>
+<div class="check">
+<img src="<%= root %>/public/img/check.png" width="100px">
 </div>
+<div class="agradecimento">
+
+    
+    <h2>
+        Obrigado por Escolher o TopGMansions
+    </h2>
+
+    <p>
+        Entraremos em contato, assim que possivel.
+    </p>
+
+
+</div>
+
+
+<%- contentFor("head") %>
+    <style>
+        .agradecimento {
+            padding-top: 75px;
+            padding-bottom: 175px;
+            text-align: center;
+        }
+
+        .check {
+            text-align: center;
+            padding-top: 50px;
+        }
+    </style>
