--- a/views/index/cadastro.ejs
+++ b/views/index/cadastro.ejs
@@ -102,16 +102,22 @@
 			preco: {
 				required: true
 			},
-			foto: {
-				required: true
-			},
 			areatotal: {
 				required: true
 			},
-			idmodalidade:{
+			areaconstruida: {
 				required: true
 			},
 			comodos: {
+				required: true
+			},
+			piscinas: {
+				required: true
+			},
+			vagas: {
+				required: true
+			},
+			idmodalidade:{
 				required: true
 			},
 		},
