vai tomar no cu

--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -66,7 +66,7 @@
 <%- contentFor("head") %>
     <style>
         .card-categoriaOld {
-            background-image: url(/public/img/OldMoneyHouse.jpg);
+            background-image: url(<%- root %>/public/img/OldMoneyHouse.jpg);
             background-size: cover;
             background-position: center;
             cursor: pointer;
@@ -75,7 +75,7 @@
         }
 
         .card-categoriaModern {
-            background-image: url(/public/img/ModernHouse.jpg);
+            background-image: url(<%- root %>/public/img/ModernHouse.jpg);
             background-size: cover;
             background-position: center;
             cursor: pointer;
@@ -84,7 +84,7 @@
         }
 
         .card-categoriaBeach {
-            background-image: url(/public/img/BeachHouse.jpg);
+            background-image: url(<%- root %>/public/img/BeachHouse.jpg);
             background-size: cover;
             background-position: center;
             cursor: pointer;
@@ -93,7 +93,7 @@
         }
 
         .card-categoriaCity {
-            background-image: url(/public/img/CityHouse.jpeg);
+            background-image: url(<%- root %>/public/img/CityHouse.jpeg);
             background-size: cover;
             background-position: center;
             cursor: pointer;
