--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,16 +45,16 @@
                         </button>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="/propriedades">PROPERTIES</a>
-                            <a class="dropdown-item" href="/cadastro">REGISTER</a>
-                            <a class="dropdown-item" href="/categorias">CATEGORIES</a>
+                            <a class="dropdown-item" href="<%- root %>/propriedades">PROPERTIES</a>
+                            <a class="dropdown-item" href="<%- root %>/cadastro">REGISTER</a>
+                            <a class="dropdown-item" href="<%- root %>/categorias">CATEGORIES</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6 text-center">
 
-                    <a href="/">
+                    <a href="<%- root %>/">
                         <img src="<%= root %>/public/img/logo.png" width="300" />
                     </a>
 
