--- a/views/index/cadastro.ejs
+++ b/views/index/cadastro.ejs
@@ -89,7 +89,7 @@
 	Documentação da Fetch API original:
 	https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch
 -->
-<script src="/public/js/fetch.js"></script>
+<script src="<%- root %>/public/js/fetch.js"></script>
 
 <script type="text/javascript">
 
@@ -223,12 +223,7 @@
 			text-align: center;
 		}
 		.caixas{
-			height: 45px;
-			margin: 35px 0;
-			text-align: left;
-			padding-bottom: 802px;
-			padding-left: 500px;
-			padding-right: 500px;
-	
+			margin: 35px auto;
+    		max-width: 450px;
 		}
 	</style>
