--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -13,7 +13,7 @@
                     <b>OLD MONEY</b>
                 </div>
                 <div class="card card-categoriaOld shadow mb-4">
-                    <div class="card-body card-body-categoria"></div>
+                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
                 </div>
 
             </div>
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="card card-categoriaModern shadow mb-4">
-                    <div class="card-body card-body-categoria">
+                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades">
                     </div>
                 </div>
 
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="card card-categoriaBeach shadow mb-4">
-                    <div class="card-body card-body-categoria"></div>
+                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
                 </div>
 
             </div>
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="card card-categoriaCity shadow mb-4">
-                    <div class="card-body card-body-categoria"></div>
+                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
                 </div>
 
             </div>
