--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,9 +45,9 @@
                         </button>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="<%- root %>/propriedades">PROPERTIES</a>
-                            <a class="dropdown-item" href="<%- root %>/cadastro">REGISTER</a>
-                            <a class="dropdown-item" href="<%- root %>/categorias">CATEGORIES</a>
+                            <a class="dropdown-item" href="<%- root %>/propriedades">PROPRIEDADES</a>
+                            <a class="dropdown-item" href="<%- root %>/cadastro">REGISTRAR</a>
+                            <a class="dropdown-item" href="<%- root %>/categorias">CATEGORIAS</a>
                         </div>
                     </div>
                 </div>
