--- a/views/index/categorias.ejs
+++ b/views/index/categorias.ejs
@@ -12,8 +12,8 @@
                 <div class="old">
                     <b>OLD MONEY</b>
                 </div>
-                <div class="card card-categoriaOld shadow mb-4">
-                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
+                <div class="card card-categoriaOld shadow mb-4" >
+                    <a class="card-body card-body-categoria" href="<%- root %>/propriedades"></a>
                 </div>
 
             </div>
@@ -25,8 +25,7 @@
                 </div>
 
                 <div class="card card-categoriaModern shadow mb-4">
-                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades">
-                    </div>
+                    <a class="card-body card-body-categoria" href="<%- root %>/propriedades"></a>
                 </div>
 
             </div>
@@ -42,7 +41,7 @@
                 </div>
 
                 <div class="card card-categoriaBeach shadow mb-4">
-                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
+                    <a class="card-body card-body-categoria" href="<%- root %>/propriedades"></a>
                 </div>
 
             </div>
@@ -54,7 +53,7 @@
                 </div>
 
                 <div class="card card-categoriaCity shadow mb-4">
-                    <div class="card-body card-body-categoria" href="<%- root %>/propriedades"></div>
+                    <a class="card-body card-body-categoria" href="<%- root %>/propriedades"></a>
                 </div>
 
             </div>
@@ -71,7 +70,7 @@
             background-position: center;
             cursor: pointer;
             border-radius: 20%;
-            width: 400px;
+            width: 100%;
         }
 
         .card-categoriaModern {
@@ -80,7 +79,7 @@
             background-position: center;
             cursor: pointer;
             border-radius: 20%;
-            width: 400px;
+            width: 100%;
         }
 
         .card-categoriaBeach {
@@ -89,7 +88,7 @@
             background-position: center;
             cursor: pointer;
             border-radius: 20%;
-            width: 400px;
+            width: 100%;
         }
 
         .card-categoriaCity {
@@ -98,7 +97,7 @@
             background-position: center;
             cursor: pointer;
             border-radius: 20%;
-            width: 400px;
+            width: 100%;
         }
 
         .card-body-categoria {
@@ -106,7 +105,7 @@
             display: flex;
             flex-direction: column;
             justify-content: end;
-            min-height: 15rem;
+            min-height: 18rem;
             color: #FFFFFF;
             font-family: 'Roboto Slab', serif;
         }
@@ -118,8 +117,8 @@
         }
 
         .bubbles {
-            padding-left: 200px;
-            padding-right: 200px;
+            margin: 0 auto;
+            max-width: 1000px;
             padding-bottom: 45px;
         }
 
