--- a/views/index/propriedades.ejs
+++ b/views/index/propriedades.ejs
@@ -32,10 +32,10 @@
                         Vagas: <%= lista[i].vagas %>
                     </p>
 
-                    <img class="mansao" src="<%- root %>/public/img/propriedades/<%= lista[i].id %>.jpg" width="500">
+                    <div class="mansao" style="background-image: url('<%- root %>/public/img/propriedades/<%= lista[i].id %>.jpg');"></div>
 
-                    <div class="button">
-                        <button class="btn btn-primary" href="<%- root %>/obrigado" type="submit">Acompanhar</button>
+                    <div>
+                        <a class="btn btn-primary" style="margin: 10px 0 50px;" href="<%- root %>/obrigado">Acompanhar</a>
                     </div>
                     
                 </div>
@@ -57,6 +57,11 @@
 
         .mansao {
             border-radius: 20px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            width: 100%;
+            height: 300px;
         }
         form .button {
 			height: 45px;
