--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -3,7 +3,7 @@
     <img src="<%= root %>/public/img/mansao2.jpg" width="1300" />
 </div>
 
-<div class="container-fluid TerceiraTela">
+<div class="container-fluid TerceiraTela text-center">
 
     <h1 class="weprovide">
         <n>ᴡᴇ ᴘʀᴏᴠɪᴅᴇ ʜᴏᴍᴇ ᴛᴏ ᴘᴇᴏᴘʟᴇ ᴡʜᴏ ᴅᴇꜱᴇʀᴠᴇ ᴛʜᴇ ᴡᴏʀʟᴅ</n>
